2004-06-02  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/c.m4 (AC_C_LONG_DOUBLE): Don't check LDBL_MAX
	and LDBL_EPSILON, as the resulting expression isn't an
	integer constant expression and violates the C standard.
	Problem reported by Nelson H. F. Beebe.  Also, check
	for "L" suffix, and check that long double doesn't have
	worse range or precision than double, that mixed-mode
	arithmetic doesn't generate a diagnostic, that double
	constants fit in long double.

2004-06-03  Kevin Ryde  <user42@zip.com.au>

	* doc/autoconf.texi (Function Portability): Add notes on free(NULL),
	malloc(0) and realloc(NULL,size).

	* doc/autoconf.texi (Shell Substitutions): Spelling error reported by
	Bob Proulx.

2004-05-31  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/headers.m4 (HAVE_STDBOOL_H): Detect _Bool bug
	in HP aC++/ANSI C B3910B A.05.55 [Dec 04 2003].  Problem reported
	by Jim Meyering.

2004-05-26  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Limitations of Builtins): Mention that ! COMMAND
	can be rewritten using if-then-else.  Suggested by Bruno Haible.

2004-05-25  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (testsuite Scripts): Fix typo.
	Problem reported by Stepan Kasal.
	
2004-05-24  Paul Eggert  <eggert@cs.ucla.edu>

	* tests/Makefile.am (autoconfdir): Fix to match comment (trivial
	change).  Patch reported by Ralf Wildenhues in
	<http://mail.gnu.org/archive/html/bug-autoconf/2004-05/msg00092.html>.

	* lib/autoconf/functions.m4 (AC_FUNC_MBRTOWC): Don't assume that a
	function F exists if the compiler and linker let you compile an
	expression like (F != 0).  Recent versions of GCC optimize away
	the reference to F in that case, since every function address must
	be nonzero, so the link succeeds even if F does not exist.
	Problem reported by Manu in
	<http://mail.gnu.org/archive/html/bug-gnu-utils/2004-05/msg00060.html>.

	* doc/autoconf.texi (Systemology): Standardize on the spelling of
	"Unix".  Many uses changed.